# HHParser

./: README.md  pyproject.toml
htmlcov/: index.html  test-report.html
src/: cli.py  conftest.py  headhunterapi.py  main.py  models.py  services.py  storage.py  vacancies.py  vacancy_api.py
tests/: conftest.py  test_cli.py  test_main.py  test_models.py  test_storage.py  test_vacancy_api.py
