[tool.poetry]
name = "hhparser"
version = "0.1.0"
description = ""
authors = ["Daniil Gnidenko <dagnidenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
mypy = "^1.18.2"
isort = "^6.0.1"
black = "^25.9.0"
flake8 = "^7.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-html = "^4.1.1"
requests = "^2.32.5"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(\.git)/
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'